--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Olá, mundo!</h1>
     <p>Este é o meu primeiro projeto Javascript.</p>
     <div id="counter">
-        <button name="subtrair" onclick="decrement()">-</button>
+        <button name="subtrair"  id="decrement">-</button>
         <span id="currentNumber">0</span>
-        <button name="adicionar" onclick="increment()">+</button>
+        <button name="adicionar"  id="increment" >+</button>
     </div>
     <script src="assets/scripts.js"></script>
 </body>
